--- a/src/app/components/product-details/product-details.module.css
+++ b/src/app/components/product-details/product-details.module.css
@@ -58,7 +58,7 @@
   .thumb {
     width: auto;
     height: 110px;
-    margin: 0 .5rem 0 0;
+    margin:0;
   }
 }
 
